updated latest code to branch

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -81,7 +81,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WAREHOUSE ANALYSIS"
+    "# WAREHOUSE ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis setup\n",
+    "- Date range: 6/1/22 to 11/30/22\n",
+    "\n",
+    "- Type of account with Snowflake - Standard Edition powered by GCP"
    ]
   },
   {
@@ -125,6 +136,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- All warehouses are idle in november"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -154,6 +173,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = qlib.wh_scaled_up_out_with_query('2022-10-01',edate)\n",
+    "df = df.fillna('Unassigned')\n",
+    "#df.unstack(level=0)\n",
+    "#df.drop([\"warehouse_name\", \"warehouse_size\"], axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.plot.bar()\n",
+    "mat_plt.bar(df[\"date\"], df[\"no_of_queries\"])\n",
+    "mat_plt.xlabel(\"Warehouses\")\n",
+    "mat_plt.ylabel(\"No. of Queries\")\n",
+    "mat_plt.title(\"Warehouse required scale up\")\n",
+    "mat_plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### TODO:  Multi cluster warehouse is not available for KIVA. Because this customer is under standard edition of Snowflake (Shwetank to confirm)\n",
     "df = qlib.wh_required_mcw()\n",
     "df = df.fillna('Unassigned')\n",
     "df.head()"
@@ -165,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.wh_under_utilization()\n",
+    "df = qlib.wh_utilization('2022-10-01')\n",
     "df = df.fillna('Unassigned')\n",
-    "df.head()"
+    "df"
    ]
   }
  ],
