query analysis for expensive queries

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -119,8 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df=qlib.total_breakdown_analysis(sdate,edate)\n",
-    "# print(df)\n",
+    "##TODO: Move to a library function\n",
     "def get_previous_dates(sdate, edate, date_shift_months):\n",
     "    sdate_datetime = datetime.strptime(sdate,'%Y-%m-%d')\n",
     "    prev_sdates_datetime = datetime.strptime(sdate,'%Y-%m-%d') - relativedelta(months=date_shift_months)\n",
@@ -794,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
