--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -32,50 +32,18 @@
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "# from dash import Dash,html,dcc,Input,Output\n",
-    "# app = Dash(__name__)\n",
+    "\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
+    "\n",
+    "import math\n",
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from tabulate import tabulate\n",
     "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from dash import Dash,html,dcc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ##center allign all the figure outputs.\n",
-    "# from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
-    "# from IPython.display import display, HTML\n",
-    "# from plotly.graph_objs import *\n",
-    "# import numpy as np\n",
-    "# init_notebook_mode(connected=True)\n",
-    "\n",
-    "# display(HTML(\"\"\"\n",
-    "# <style>\n",
-    "# .output {\n",
-    "#     display: flex;\n",
-    "#     align-items: center;\n",
-    "#     text-align: center;\n",
-    "# }\n",
-    "# </style>\n",
-    "# \"\"\"))"
    ]
   },
   {
@@ -111,10 +79,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Query Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis setup\n",
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "* Analysis date range: '2022-09-12' to '2022-10-12': last rolling month in the data we collected.\n",
+    "\n",
+    "* Type of Snowflake account: Standard Edition\n",
+    "\n",
+    "* Credit to dollar conversion: `$`2 per credit\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function for query text hashing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_query_hash(txt):\n",
+    "    hash_object = hashlib.md5(txt)\n",
+    "    return hash_object\n",
+    "\n",
+    "def get_unique_query(df):\n",
+    "    queries = df[\"query_text\"].values.tolist()\n",
+    "    query_hashes = [get_query_hash(q.encode()).hexdigest() for q in queries]\n",
+    "    df[\"query_hash\"] = query_hashes\n",
+    "    df_unique_queries = df.drop_duplicates(subset=['query_hash']).reset_index(drop=True)\n",
+    "    df2 = df.groupby('query_hash',as_index=False)[['credits','execution_success','execution_fail']].sum()\n",
+    "    df_unique_queries.drop(columns=[\"execution_status\",\"execution_success\",\"execution_fail\"], inplace=True)\n",
+    "#     df2.drop(columns=[\"execution_status\"], inplace=True)\n",
+    "    df_new = pd.merge(df_unique_queries, df2, on=[\"query_hash\"],suffixes=('_individual_max', '_total'))\n",
+    "    df_new = df_new.sort_values(by='credits_total', ascending=False)\n",
+    "    return df_new\n",
+    "    return df2"
    ]
   },
   {
@@ -130,9 +154,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_expensive_queries(sdate,edate,5)\n",
-    "# df.to_csv('/home/manas/DS_data/most_expensive.csv')\n",
+    "df = qlib.n_expensive_queries(sdate,edate,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
+    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Create columns for number of times query ran to success and failure\n",
+    "df_unique = get_unique_query(df).reset_index(drop=True)\n",
+    "df_unique"
    ]
   },
   {
@@ -145,30 +189,23 @@
     "\n",
     "trace1  = go.Scatter(\n",
     "        mode='lines+markers',\n",
-    "        x = df['query_id'],\n",
-    "        y = df['credits'],\n",
+    "        x = df['query_id'][0:50],\n",
+    "        y = df['credits'][0:50],\n",
     "        name=\"Credits\",\n",
-    "        marker_color='crimson'\n",
+    "        line=dict(color='black'),\n",
+    "        marker=dict(\n",
+    "            size=10,\n",
+    "            color=(df_unique[\"execution_status\"] == \"FAIL\").astype(int).astype('int'),\n",
+    "            colorscale=[[0, 'green'], [1, 'red']]\n",
+    "        )\n",
     "    )\n",
     "\n",
-    "# trace2 = go.Bar(\n",
-    "#         x = df['query_id'],\n",
-    "#         y = df['warehouse_size'],\n",
-    "#         name=\"warehouse size\",\n",
-    "#         yaxis='y2',\n",
-    "#         marker_color ='green',\n",
-    "#         marker_line_width=1.5,\n",
-    "#         marker_line_color='rgb(8,48,107)',\n",
-    "#         opacity=0.5\n",
-    "#     )\n",
     "\n",
-    "# data = [trace1, trace2]\n",
     "data = [trace1]\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title_text='Most expensive queries',\n",
+    "    title_text='Naive Most expensive queries',\n",
     "    yaxis=dict(\n",
-    "        # range = [0, 100],\n",
     "        title=\"Credits\"\n",
     "    ),\n",
     "    xaxis=dict(\n",
@@ -185,16 +222,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: @Saravana to check if query 0 and query 1 were repeated using query hash"
+    "## Most expensive queries\n",
+    "\n",
+    "trace1 = go.Bar(\n",
+    "        x = df_unique['query_hash'],\n",
+    "        y = df_unique['execution_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "        yaxis='y2',\n",
+    "        marker=dict(color='green'),\n",
+    "        opacity=0.5\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df_unique['query_hash'],\n",
+    "        y = df_unique['execution_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "        yaxis='y2',\n",
+    "        marker=dict(color='red'),\n",
+    "        opacity=0.5\n",
+    "    )\n",
+    "\n",
+    "trace3  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df_unique['query_hash'],\n",
+    "        y = df_unique['credits_total'],\n",
+    "        name=\"Credits\",\n",
+    "        line=dict(color='black'),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "data = [trace1, trace2, trace3]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Most expensive queries',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Total Credits\",\n",
+    "        showgrid=False,\n",
+    "        range=[0, math.ceil(max(df_unique[\"credits_total\"]))+10]\n",
+    "    ),\n",
+    "    yaxis2=dict(\n",
+    "        title=\"Number of times ran\", overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "#         position=0.98,\n",
+    "        showgrid=False,\n",
+    "        range=[0, math.ceil(max(df_unique[\"execution_success\"] + df_unique[\"execution_fail\"]))+10]\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Query Hash\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"right\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Cost of running a query depends on the time to execute the query and the warehouse it is run on.\n",
-    "* Best practice to optimize would be to either reduce the execution time of the query or use efficient virtual warehouse practices.\n",
-    "* Establishing resource monitors to estimate credit usage would be beneficial."
+    "### Analysis\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* Naively optimizing the most expensive query is not an effective strategy. Some queries:\n",
+    "    * Fail to run to completion generating no ROI but use resources\n",
+    "    * Run more frequently than others so optimizing them will lead to better ROI\n",
+    "    * Queries that fail to run or cumulatively consume more credits should be optimized first\n",
+    "    \n",
+    "* Queries aggregated by query hash (i.e. query text matching exactly) show:\n",
+    "    * Query ID: 01a750e9-0604-e3d8-0000-08d15d569cba cumulatively contributes to the most number of credits (~63) and runs to completion 30 times \n",
+    "    * Query ID: 01a63d12-0604-9e03-0000-08d15b396b8e cumulatively contributes to the 3rd most number of credits (~26) and fails the first time but reruns 30 times - successfully following times.\n",
+    "    * Query Hash: 78c04eae601841fc28f9b5bd31a2fb27 (Query IDs: 01a00ad8-0502-e8ae-0000-08d14f71be22, 01a00afc-0502-e8bf-0000-08d14f7231aa) fails both times it runs and costs 4 credits\n",
+    "    * Query Hash: 6aad42c079da30848b017d627cc97341 (Query IDs: 01a00ad9-0502-e8ae-0000-08d14f71be4e, 01a00afd-0502-e8ae-0000-08d14f720af6) fails both time it runs and costs 4 credits\n",
+    "    * Multiple queries that fail once during the analysis period\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* High spillage -> consider a larger instance\n",
+    "* Large number of partitions scanned:\n",
+    "    * Consider Search Optimization enable for selective queries\n",
+    "    * Consider Autoclustering enable with thoughtfully chosen cluster keys\n",
+    "* SCD2 for update queries (https://community.snowflake.com/s/article/Building-a-Type-2-Slowly-Changing-Dimension-in-Snowflake-Using-Streams-and-Tasks-Part-1)\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
@@ -217,22 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.iloc[0][\"query_text\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ANALYSIS\n",
-    "\n",
-    "* Has an execution time of 670 mins.\n",
-    "* SELECT statement\n",
-    "* Multiple JOIN statements in query.\n",
-    "* Most partitions are scanned.\n",
-    "* Executed using a SMALL warehouse.\n",
-    "* Scans 6.3 GB of data\n",
-    "* Scans 91% of data from cache\n"
+    "print(df_unique.iloc[0][\"query_text\"])"
    ]
   },
   {
@@ -248,22 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.iloc[1][\"query_text\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ANALYSIS\n",
-    "* Execution time of 357 mins.\n",
-    "* FAILED query.\n",
-    "* Large number of bytes are spilled to both local (4719 GB) and remote (4491 GB) storage.\n",
-    "* Multiple JOIN statements in query.\n",
-    "* Most partitions are scanned.\n",
-    "* Executed using SMALL warehouse.\n",
-    "* Scans 83% of the data from cache.\n",
-    "\n"
+    "print(df_unique.iloc[1][\"query_text\"])"
    ]
   },
   {
@@ -279,34 +374,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.iloc[2][\"query_text\"])"
+    "print(df_unique.iloc[2][\"query_text\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ANALYIS\n",
-    "* Same query ran multiple times.\n",
-    "* UPDATE query\n",
-    "* Has execution time of 37 mins.\n",
-    "* Execution time remains constant.\n",
-    "* 146 GB of bytes scanned\n",
-    "* Scans 63% of total partitions\n",
-    "* Only 10% of data from cache is scanned."
+    "### Query 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_unique.iloc[9][\"query_text\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OPTIML RECOMMENDATIONS\n",
-    "\n",
-    "* PROD_WH can be scaled out as multicluster as large amount of data is being computed with several users using them.\n",
-    "* Defining clustering keys will help with reducing number of partitions in the table being scanned.\n",
-    "* Scaling up is also required for PROD_WH as bytes are being spilled causing failure of query.\n",
-    "* Update query not being cached enough, therefore autosuspension happens too quickly or cache needs to be built before running this query.\n",
-    "* Optimizing SELECT query by eliminating multiple JOINS, SELECT clauses."
+    "### Query 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_unique.iloc[10][\"query_text\"])"
    ]
   },
   {
@@ -323,9 +423,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_queries_spill_to_storage(sdate,edate,5)\n",
-    "df.head()\n",
-    "\n",
-    "\n"
+    "df.head()"
    ]
   },
   {
