query analysis for expensive queries

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -195,7 +195,7 @@
     "        line=dict(color='black'),\n",
     "        marker=dict(\n",
     "            size=10,\n",
-    "            color=(df_unique[\"execution_status\"] == \"FAIL\").astype(int).astype('int'),\n",
+    "            color=(df_unique[\"execution_fail\"] >0 ).astype(int).astype('int'),\n",
     "            colorscale=[[0, 'green'], [1, 'red']]\n",
     "        )\n",
     "    )\n",
