correcting n_expensive_query

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -174,9 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Create columns for number of times query ran to success and failure\n",
-    "df_unique = get_unique_query(df).reset_index(drop=True)\n",
-    "df_unique"
+    "##TODO: Temporal distribution of expensive queries by warehouse - DEV_WH 8-10: 954a79a28187b69c99ca3de1d8a106ce\n",
+    "df_unique = get_unique_query(df).reset_index(drop=True)"
    ]
   },
   {
@@ -283,6 +282,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_unique.head(20)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -296,10 +304,9 @@
     "    * Queries that fail to run or cumulatively consume more credits should be optimized first\n",
     "    \n",
     "* Queries aggregated by query hash (i.e. query text matching exactly) show:\n",
-    "    * Query ID: 01a750e9-0604-e3d8-0000-08d15d569cba cumulatively contributes to the most number of credits (~63) and runs to completion 30 times \n",
-    "    * Query ID: 01a63d12-0604-9e03-0000-08d15b396b8e cumulatively contributes to the 3rd most number of credits (~26) and fails the first time but reruns 30 times - successfully following times.\n",
-    "    * Query Hash: 78c04eae601841fc28f9b5bd31a2fb27 (Query IDs: 01a00ad8-0502-e8ae-0000-08d14f71be22, 01a00afc-0502-e8bf-0000-08d14f7231aa) fails both times it runs and costs 4 credits\n",
-    "    * Query Hash: 6aad42c079da30848b017d627cc97341 (Query IDs: 01a00ad9-0502-e8ae-0000-08d14f71be4e, 01a00afd-0502-e8ae-0000-08d14f720af6) fails both time it runs and costs 4 credits\n",
+    "    * Query IDs: 01a78358-0604-ec7d-0000-08d15dc9f6fe, 01a78350-0604-ec7d-0000-08d15dc9f016  might be responsible for increase in compute consumption for DEV_WH on 8th Oct. (alternatively could be WH scaling/size change as well)\n",
+    "    * Query Hash: 6ef334ed61427031d52acf53a055ab57 cumulatively contributes to the most number of credits (~28) and runs to completion 12 times \n",
+    "    * Query Hash: 49539ab6df6b8a1df712dbbd70efe3e3 fails 3 times it runs and costs ~3 credits\n",
     "    * Multiple queries that fail once during the analysis period\n",
     "\n",
     "</div>"
@@ -381,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 9"
+    "### Query 12"
    ]
   },
   {
@@ -390,23 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df_unique.iloc[9][\"query_text\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Query 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df_unique.iloc[10][\"query_text\"])"
+    "print(df_unique.iloc[12][\"query_text\"])"
    ]
   },
   {
