remove notebook output

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Temporal distribution of expensive queries by warehouse - DEV_WH 8-10: 954a79a28187b69c99ca3de1d8a106ce\n",
+    "##TODO: Temporal distribution of expensive queries by warehouse\n",
     "df_unique = get_unique_query(df).reset_index(drop=True)"
    ]
   },
