added knott cost analysis

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -29,6 +29,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove scrollable windows\n",
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
@@ -164,8 +177,7 @@
    "outputs": [],
    "source": [
     "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
-    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
-    "df.head()"
+    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)"
    ]
   },
   {
@@ -184,17 +196,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Most expensive queries\n",
-    "\n",
-    "trace1  = go.Scatter(\n",
+    "## Naive most expensive queries\n",
+    "trace1 = go.Scatter(\n",
     "        mode='lines+markers',\n",
     "        x = df['query_id'][0:50],\n",
     "        y = df['credits'][0:50],\n",
     "        name=\"Credits\",\n",
-    "        line=dict(color='black'),\n",
     "        marker=dict(\n",
     "            size=10,\n",
-    "            color=(df_unique[\"execution_fail\"] >0 ).astype(int).astype('int'),\n",
+    "            color=(df[\"execution_fail\"] >0 ).astype(int).astype('int'),\n",
     "            colorscale=[[0, 'green'], [1, 'red']]\n",
     "        )\n",
     "    )\n",
@@ -287,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unique.head(20)"
+    "df_unique.head(100)"
    ]
   },
   {
@@ -388,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 12"
+    "#### Query 12"
    ]
   },
   {
