--- a/notebooks/knott/cost_analysis.ipynb
+++ b/notebooks/knott/cost_analysis.ipynb
@@ -29,17 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove scrollable windows\n",
-    "%%javascript\n",
-    "IPython.OutputArea.auto_scroll_threshold = 9999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
@@ -79,15 +68,15 @@
     "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
     "# Initialize local environment\n",
     "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "cache_dir = os.path.expanduser('~/data/knott')\n",
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
-    "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "qlib = SNFLKQuery(connection, 'KNT', cache_dir)\n",
     "# Initialize analysis dates\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
+    "sdate = '2022-10-11'\n",
+    "edate = '2022-10-22'\n",
     "\n",
     "\n",
     "# Most recent rolling month that we have data for\n",
@@ -691,7 +680,8 @@
    "outputs": [],
    "source": [
     "df_titles=sorted(df[\"warehouse_name\"].unique())\n",
-    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]"
+    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]\n",
+    "\n"
    ]
   },
   {
@@ -703,6 +693,16 @@
     "for i in range(len(df_warehouse)):\n",
     "    fig = px.area(df_warehouse[i], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[i])\n",
     "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
+    "# fig.show()"
    ]
   },
   {
