queries and wh_analysis update

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -349,7 +349,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=qlib.count_of_queries_wh(sdate,edate)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df, x=df[\"hourly_start_time\"], y=[df[\"query_count\"]], title=\"Query count DEV_WH\",color_discrete_sequence=color_scheme)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.wh_profiling_queued_load(start_date=\"2022-09-26\",wh_name=\"DEV_WH\")\n",
+    "fig = px.bar(df, x=df[\"start_time_trunced_at_minute\"], y=df[\"avg_queued_load\"], title=\" DEV_WH\",color_discrete_sequence=color_scheme)\n",
+    "# Range the width has to be updated in\n",
+    "# fig.update_traces(width=2000000)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.query_find(\"2022-09-26 14:30:00\",\"2022-09-26 14:50:00\")\n"
+   ]
   }
  ],
  "metadata": {
